# antenna-calc

./: .gitignore  CMakeLists.txt  README.md
include/: antenna-calc.h
src/: antenna-calc.cpp  main.cpp
